tests/fixtures/compile_errors/pow_with_signed_exponent.fe
contract Foo:

    pub def bar(base: i128, exponent: i128) -> i128:
        return base ** exponent